--- a/STHM/frm_ChangePassword.xaml
+++ b/STHM/frm_ChangePassword.xaml
@@ -3,7 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
         Title="frm_ChangePassword" Height="550" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
-    <Grid Background="#25333c">
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black" Offset="0"/>
+                <GradientStop Color="#FF4B0D0D" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Label Content="Đổi mật khẩu" HorizontalAlignment="Center" Margin="0,50,0,0" VerticalAlignment="Top" FontSize="30" Foreground="White"/>
         <Label Content="Tài khoản" HorizontalAlignment="Left" Margin="35,105,0,0" VerticalAlignment="Top" Foreground="White" FontSize="16"/>
         <Label Content="Mật khẩu cũ" HorizontalAlignment="Left" Margin="35,205,0,0" VerticalAlignment="Top" Foreground="White" FontSize="16"/>
@@ -14,10 +20,10 @@
         <dxe:PasswordBoxEdit x:Name="txtMatKhauMoi" HorizontalAlignment="Center" Margin="0,340,0,0" VerticalAlignment="Top" Width="320" Height="35" NullText="Nhập mật khẩu" FontSize="16"/>
 
         <Button x:Name="btnThayDoi" Content="Thay đổi" 
-                HorizontalAlignment="Left" Margin="35,400,0,0" VerticalAlignment="Top" Width="100" Height="40" 
+                HorizontalAlignment="Left" Margin="40,400,0,0" VerticalAlignment="Top" Width="100" Height="40" 
                 Background="#25333c" Foreground="White" BorderBrush="WhiteSmoke" FontSize="16" BorderThickness="0.5" Click="btnThayDoi_Click"/>
         <Button x:Name="btnHuy" Content="Hủy" 
-                HorizontalAlignment="Left" Margin="225,400,0,0" VerticalAlignment="Top" Width="130" Height="40" 
+                HorizontalAlignment="Left" Margin="257,400,0,0" VerticalAlignment="Top" Width="103" Height="40" 
                 Background="#25333c" Foreground="White" BorderBrush="WhiteSmoke" FontSize="16" BorderThickness="0.5" Click="btnHuy_Click"/>
     </Grid>
 </Window>
