--- a/STHM/frm_Meter.xaml
+++ b/STHM/frm_Meter.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" x:Class="STHM.frm_Meter"
-        Title="Quản lý điểm đo-công tơ" Height="384" Width="397" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <Grid Background="Teal">
+        Title="Quản lý điểm đo-công tơ" Height="372" Width="397" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <Grid Background="#FFC6DCF7" Margin="0,0,0,2">
 
         <dxe:TextEdit x:Name="txtMetID" HorizontalAlignment="Left" Margin="133,12,0,0" VerticalAlignment="Top" Width="247"/>
         <dxe:TextEdit x:Name="txtMetKey" HorizontalAlignment="Left" Margin="133,39,0,0" VerticalAlignment="Top" Width="247"/>
@@ -15,8 +15,8 @@
         <dxe:ComboBoxEdit x:Name="cboMetType" HorizontalAlignment="Left" Margin="133,201,0,0" VerticalAlignment="Top" Width="247"/>
         <dxe:TextEdit x:Name="udTU" HorizontalAlignment="Left" Margin="133,228,0,0" VerticalAlignment="Top" Width="247" MaskType="Numeric" Mask="n0" MaskUseAsDisplayFormat="True"/>
         <dxe:ComboBoxEdit x:Name="cboLine" HorizontalAlignment="Left" Margin="133,255,0,0" VerticalAlignment="Top" Width="247"/>
-        <Button Content="Lưu" x:Name="btnSave" Click="btnSave_Click" HorizontalAlignment="Left" Margin="206,300,0,0" VerticalAlignment="Top" Width="75" Height="31"/>
-        <Button Content="Đóng" x:Name="btnClose" Click="btnClose_Click" HorizontalAlignment="Left" Margin="305,300,0,0" VerticalAlignment="Top" Width="75" Height="31"/>
+        <Button Content="Lưu" x:Name="btnSave" Click="btnSave_Click" HorizontalAlignment="Left" Margin="206,296,0,0" VerticalAlignment="Top" Width="75" Height="31" Background="#FFA3C3EC"/>
+        <Button Content="Đóng" x:Name="btnClose" Click="btnClose_Click" HorizontalAlignment="Left" Margin="305,296,0,0" VerticalAlignment="Top" Width="75" Height="31" Background="#FFA3C3EC"/>
         <Label Content="Số thứ tự" HorizontalAlignment="Left" Margin="69,8,0,0" VerticalAlignment="Top"/>
         <Label Content="Serial công tơ" HorizontalAlignment="Left" Margin="45,35,0,0" VerticalAlignment="Top"/>
         <Label Content="Tên điểm đo" HorizontalAlignment="Left" Margin="53,62,0,0" VerticalAlignment="Top"/>
